--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -1,19 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="utf-8" />
-    <title>Decap CMS Admin</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Content Manager</title>
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 
 <body>
-    <!-- Load Decap CMS from a CDN or local file -->
-    <script src="https://unpkg.com/decap-cms@^2.0.0/dist/decap-cms.js"></script>
-
-    <!-- Initialize Decap CMS -->
-    <script>
-        CMS.init();
-    </script>
+    <!-- Include the script that builds the page and powers Decap CMS -->
+    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
 </body>
 
 </html>
